# arsenal

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  build.sh
.github/workflows/: boot-test.yml  build-iso.yml  ci-selftest.yml  ci-test.yml  integration-test.yml  release.yml
cli/: README.md  pyproject.toml
cli/arsenal_cli/: __init__.py  __main__.py  config.py  log.py  project.py  prompts.py  runner.py  ui.py  version.py
cli/arsenal_cli/ai/: __init__.py  assistant.py  ollama.py  openai_compat.py  provider.py
cli/arsenal_cli/commands/: __init__.py  ai.py  armory.py  dashboard.py  doctor.py  profile.py  report.py  reportbug.py  update.py  workflow.py
cli/arsenal_cli/data/profiles/: blue.list  forensics.list  red.list  reverse.list
cli/arsenal_cli/report/: __init__.py  render.py
cli/arsenal_cli/workflows/: __init__.py  ad.py  base.py  recon.py  web.py
cli/tests/: test_ai.py  test_armory.py  test_cli.py  test_dashboard.py  test_doctor.py  test_profile.py  test_project.py  test_prompts.py  test_report.py  test_reportbug.py  test_runner.py  test_ui.py  test_update.py  test_workflows.py
docs/: README.md  ai.md  commands.md  hardening.md  platform-cli.md  threat-model.md  troubleshooting.md  update.md  weapon-framework.md  workflows.md
manifests/: README.md
profile/: packages.lean.drop  packages.x86_64  pacman-blackarch.conf
profile/airootfs/etc/: hosts  issue  motd  nftables.conf  os-release  pacman.conf
profile/airootfs/etc/arsenal/: arsenal.conf
profile/airootfs/etc/mkinitcpio.conf.d/: arsenal.conf
profile/airootfs/etc/pacman.d/: blackarch-mirrorlist
profile/airootfs/root/: .bash_profile  .xinitrc
tools/: gen_sbom.py  integration-test.sh  smoke-test.sh  test_gen_sbom.py
(+14 files in other folders)
